# homework-DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: auth_data1.json  lms_data1.json  lms_data2.json  users_data1.json  users_data2.json
lms/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_alter_lesson_course.py  0006_alter_course_options_alter_lesson_options.py  0007_course_price.py  0008_subscription_payment_link.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar.py  0003_payment.py
